{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 25,
  "lineage": "20c62ca1-2b40-be0c-ba90-2be78c08062a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d880cd8d41df0e3c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-206-173-51.compute-1.amazonaws.com",
            "public_ip": "44.206.173.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev_nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-09ef6d70775732da1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-208-152-227.compute-1.amazonaws.com",
            "public_ip": "44.208.152.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev_nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-080c5c5d2b517b889",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-206-32-72.compute-1.amazonaws.com",
            "public_ip": "44.206.32.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev_nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756196241096:internet-gateway/igw-0c773acfd8b140ac8",
            "id": "igw-0c773acfd8b140ac8",
            "owner_id": "756196241096",
            "tags": {
              "Name": "dev_internet_gw"
            },
            "vpc_id": "vpc-0a19d96ccbf715840"
          },
          "dependencies": [
            "aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d880cd8d41df0e3c",
            "id": "nat-0eaf63629b4034b9b",
            "network_interface_id": "eni-0531ddb0f003e624b",
            "private_ip": "172.33.10.110",
            "public_ip": "44.206.173.51",
            "subnet_id": "subnet-0a345258c36be3a57",
            "tags": {
              "Name": "dev_nat_gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09ef6d70775732da1",
            "id": "nat-0cd5775f1b55090d0",
            "network_interface_id": "eni-059885966ad075669",
            "private_ip": "172.33.20.126",
            "public_ip": "44.208.152.227",
            "subnet_id": "subnet-0b8ab20b2d1d6a64b",
            "tags": {
              "Name": "dev_nat_gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-080c5c5d2b517b889",
            "id": "nat-0925191a7fb8a1a7d",
            "network_interface_id": "eni-0f8419322d7c8c072",
            "private_ip": "172.33.30.235",
            "public_ip": "44.206.32.72",
            "subnet_id": "subnet-0e63edda785404a35",
            "tags": {
              "Name": "dev_nat_gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lambda_function_rt",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756196241096:route-table/rtb-057bc7eae9936d200",
            "id": "rtb-057bc7eae9936d200",
            "owner_id": "756196241096",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eaf63629b4034b9b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_lambda_function_rt_a"
            },
            "vpc_id": "vpc-0a19d96ccbf715840"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756196241096:route-table/rtb-008740082cae2df2a",
            "id": "rtb-008740082cae2df2a",
            "owner_id": "756196241096",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cd5775f1b55090d0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_lambda_function_rt_b"
            },
            "vpc_id": "vpc-0a19d96ccbf715840"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756196241096:route-table/rtb-0d5d23efd662633aa",
            "id": "rtb-0d5d23efd662633aa",
            "owner_id": "756196241096",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0925191a7fb8a1a7d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_lambda_function_rt_c"
            },
            "vpc_id": "vpc-0a19d96ccbf715840"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756196241096:route-table/rtb-02dbf517497a0e9a7",
            "id": "rtb-02dbf517497a0e9a7",
            "owner_id": "756196241096",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c773acfd8b140ac8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_public_rt"
            },
            "vpc_id": "vpc-0a19d96ccbf715840"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060ee06872495d947",
            "route_table_id": "rtb-057bc7eae9936d200",
            "subnet_id": "subnet-0dacb6bcba6a7d524"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.lambda_function_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037fe8bb961eec207",
            "route_table_id": "rtb-057bc7eae9936d200",
            "subnet_id": "subnet-00b3194bb44750435"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.lambda_function_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077bc778f0f231ee0",
            "route_table_id": "rtb-057bc7eae9936d200",
            "subnet_id": "subnet-0cbae397d72e8d00b"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.lambda_function_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6490b633765dad2",
            "route_table_id": "rtb-02dbf517497a0e9a7",
            "subnet_id": "subnet-0a345258c36be3a57"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ef47b63d0081180",
            "route_table_id": "rtb-02dbf517497a0e9a7",
            "subnet_id": "subnet-0b8ab20b2d1d6a64b"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b5f443ed7ac0798",
            "route_table_id": "rtb-02dbf517497a0e9a7",
            "subnet_id": "subnet-0e63edda785404a35"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756196241096:subnet/subnet-0dacb6bcba6a7d524",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.33.100.0/24",
            "id": "subnet-0dacb6bcba6a7d524",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756196241096",
            "tags": {
              "Name": "dev_private_subnet_a"
            },
            "tags_all": {
              "Name": "dev_private_subnet_a"
            },
            "vpc_id": "vpc-0a19d96ccbf715840"
          },
          "dependencies": [
            "aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756196241096:subnet/subnet-00b3194bb44750435",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.33.120.0/24",
            "id": "subnet-00b3194bb44750435",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756196241096",
            "tags": {
              "Name": "dev_private_subnet_b"
            },
            "tags_all": {
              "Name": "dev_private_subnet_b"
            },
            "vpc_id": "vpc-0a19d96ccbf715840"
          },
          "dependencies": [
            "aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756196241096:subnet/subnet-0cbae397d72e8d00b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.33.130.0/24",
            "id": "subnet-0cbae397d72e8d00b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "756196241096",
            "tags": {
              "Name": "dev_private_subnet_c"
            },
            "tags_all": {
              "Name": "dev_private_subnet_c"
            },
            "vpc_id": "vpc-0a19d96ccbf715840"
          },
          "dependencies": [
            "aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756196241096:subnet/subnet-0a345258c36be3a57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.33.10.0/24",
            "id": "subnet-0a345258c36be3a57",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756196241096",
            "tags": {
              "Name": "dev_public_subnet_a"
            },
            "tags_all": {
              "Name": "dev_public_subnet_a"
            },
            "vpc_id": "vpc-0a19d96ccbf715840"
          },
          "dependencies": [
            "aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756196241096:subnet/subnet-0b8ab20b2d1d6a64b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.33.20.0/24",
            "id": "subnet-0b8ab20b2d1d6a64b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756196241096",
            "tags": {
              "Name": "dev_public_subnet_b"
            },
            "tags_all": {
              "Name": "dev_public_subnet_b"
            },
            "vpc_id": "vpc-0a19d96ccbf715840"
          },
          "dependencies": [
            "aws_vpc.application_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756196241096:subnet/subnet-0e63edda785404a35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.33.30.0/24",
            "id": "subnet-0e63edda785404a35",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "756196241096",
            "tags": {
              "Name": "dev_public_subnet_c"
            },
            "tags_all": {
              "Name": "dev_public_subnet_c"
            },
            "vpc_id": "vpc-0a19d96ccbf715840"
          },
          "dependencies": [
            "aws_vpc.application_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "application_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:756196241096:vpc/vpc-0a19d96ccbf715840",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.33.0.0/16",
            "default_network_acl_id": "acl-0408fbec278ccfd09",
            "default_route_table_id": "rtb-0a104be0041a421af",
            "default_security_group_id": "sg-07f7788c51515b72f",
            "dhcp_options_id": "dopt-a6bddadd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a19d96ccbf715840",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a104be0041a421af",
            "owner_id": "756196241096",
            "tags": {
              "Name": "dev_application_vpc"
            },
            "tags_all": {
              "Name": "dev_application_vpc"
            }
          }
        }
      ]
    }
  ]
}